--- a/package.json
+++ b/package.json
@@ -1,31 +1,26 @@
 {
-  "name": "legal-petition-frontend",
-  "version": "1.0.0",
+  "name": "pakistani-legal-petition-ai-frontend",
   "private": true,
+  "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.20",
-    "classnames": "^2.5.1",
-    "lucide-react": "^0.460.0",
-    "next": "^14.2.7",
-    "postcss": "^8.4.47",
-    "react-markdown": "^9.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "remark-gfm": "^4.0.0",
-    "tailwindcss": "^3.4.13",
-    "@tailwindcss/typography": "^0.5.15"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "lucide-react": "^0.344.0"
   },
   "devDependencies": {
-    "@types/node": "^20.14.15",
-    "@types/react": "^18.3.8",
-    "@types/react-dom": "^18.3.0",
-    "typescript": "^5.6.3"
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.0.11"
   }
 }
 
